2011-05-22	Stephan Linz <linz@li-pro.net>

	* common: HOWTO: split image documentation, one for each board
	* common: HOWTO: rename the non-udev default configuration
	* common: HOWTO: more documentation for S2I-ML505-MMU-gige-11.5

2011-05-21	Stephan Linz <linz@li-pro.net>

	* common: adapt latest patch sets to linux-2.6.31.13

2011-05-14	Stephan Linz <linz@li-pro.net>

	* ptxconfig: migrate to ptxdist-2011.05.0
	* ptxconfig: add mdev startup script and configuration
	* ptxconfig: upgrade to libuio-0.2.1
	* ptxconfig: upgarde to busybox-1.17.1
	* ptxconfig: expand devnodes for Xilinx SystemACE device files
	* ptxconfig: expand devnodes for ramdisk and loop device files
	* ptxconfig: remove non-udev configuration (use mdev instead)
	* common: introduce the xlbsp-to-ptxdist converter script
	* common: adapt latest patch sets to linux-2.6.31.13
	* common: stay on dbus-glib-0.82 (from ptxdist-2010.08.0)
	* common: stay on glib-2.22.1 (from ptxdist-2010.08.0)
	* common: stay on dbus-1.2.24 (from ptxdist-2010.08.0)

2011-01-25	Stephan Linz <linz@li-pro.net>

	* ptxconfig: enable iperf
	* ptxconfig: rename local source mbref-reg-trunk to mbref-uio-trunk
	* common: upgarde patch sets to u-boot-2010.12 with s2imac support
	* common: upgarde patch sets to linux-2.6.31.13 with s2imac support

2011-01-16	Stephan Linz <linz@li-pro.net>

	* ptxconfig: include and enable new local source mbref-reg-trunk
	* ptxconfig: include and enable new package libuio-0.2.0-rc1
	* ptxconfig: expand devnodes for Xilinx hwicap device files
	* ptxconfig: expand devnodes for uio device files
	* common: adapt uio_of_genirq fixes, PVR for Microblaze v8.00.b
	* common: configure license of devmem2, set to GPL

2010-12-16	Stephan Linz <linz@li-pro.net>

	* ptxconfig: enable i2ctools and introduce a non-udev configuration
	* ptxconfig: enable busybox hexdump
	* common: HOWTO: makes the non-udev configuration as default
	* common: HOWTO: more documentation for xps_iic