@@ -1,4 +1,6 @@
 # Template .gitignore file for project
+dist
+gstate
 selected_*
 platform-*
 logfile
