@@ -1,5 +1,9 @@
 2011-05-22	Stephan Linz <linz@li-pro.net>
 
+	* common: introduce the build_all.mk make script
+
+2011-05-22	Stephan Linz <linz@li-pro.net>
+
 	* common: HOWTO: split image documentation, one for each board
 	* common: HOWTO: rename the non-udev default configuration
 	* common: HOWTO: more documentation for S2I-ML505-MMU-gige-11.5
